Fix scrollbar ui and menu visibility

--- a/packages/components/src/local/organisms/wargame-list/styles.module.scss
+++ b/packages/components/src/local/organisms/wargame-list/styles.module.scss
@@ -7,8 +7,7 @@
 
 .contain-option-menu {
   position: absolute;
-  right: 6px;
-  top: 2.25em;
+  top: 1.5em;
   z-index: 3;
 }
 
@@ -43,7 +42,6 @@
 .searchlist-title {
   align-items: center;
   border-bottom: 1px solid #f2f2f2;
-  display: flex;
   margin-bottom: 0 !important;
   padding: 1em 0;
   position: relative;
@@ -53,6 +51,7 @@
     .wargame-option-menu-btn {
       opacity: 1;
       z-index: 1;
+      margin-left: 1em;
     }
   }
 }
